# mcsn

./: .gitmodules  meson.build
src/mcpacket/: data_utils.c  meson.build  protocol.c  translation_utils.c
src/mcpacket/include/: data_utils.h  nbt.h  particle_types.h  protocol.h  translation_utils.h
src/mcpacket/mcd2packet/: mcd2packet.py  requirements.txt
src/mcsn/: main.c  meson.build
src/mcsn/include/: main.h
